Fix burger scroll, better padding on mobile

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -7,7 +7,8 @@ $contrast_color: #31ab9b;
 
 $padding-xl: 180px;
 $padding-md: 80px;
-$padding-sm: 10px;
+$padding-sm: 40px;
+$padding-xs: 20px;
 
 $break-md: 1200px;
 $break-sm: 1000px;
